법령 트리메뉴

--- a/html/법령_목록.html
+++ b/html/법령_목록.html
@@ -226,11 +226,11 @@
                             <ul class="tree-list" id="coverment">
                                 <li>
                                     <div class="haschildren one-depth all">
-                                        <i></i> 전체
+                                        <button type="button" class="all-tree"><span class="ir-text">전체메뉴</span></button> <a href="#">전체</a>
                                     </div>
-                                    <ul class="two-depth-list">
+                                    <ul class="two-depth-list is-active">
                                         <li>
-                                            <div class="haschildren two-depth-button"><i></i> 부처</div>
+                                            <div class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button> <a href="#">부처</a></div>
                                             <ul class="tree-depth-list">
                                                 <li class="is-active"><a href="#">고용노동부</a></li>
                                                 <li><a href="#">과학기술정보통신부</a></li>
@@ -253,7 +253,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <div  class="haschildren two-depth-button"><i></i> 청</div>
+                                            <div  class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button> <a href="#">청</a></div>
                                             <ul class="tree-depth-list">
                                                 <li><a href="#">검찰청</a></li>
                                                 <li><a href="#">경찰청</a></li>
@@ -275,7 +275,7 @@
                                             </ul>
                                         </li>    
                                         <li>
-                                            <div  class="haschildren two-depth-button"><i></i> 부처</div>
+                                            <div  class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button> <a href="#">부처</a></div>
                                             <ul class="tree-depth-list">
                                                 <li><a href="#">고용노동부</a></li>
                                                 <li><a href="#">과학기술정보통신부</a></li>
@@ -298,7 +298,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <div class="haschildren two-depth-button"><i></i> 청</div>
+                                            <div  class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button> <a href="#">청</a></div>
                                             <ul class="tree-depth-list">
                                                 <li><a href="#">검찰청</a></li>
                                                 <li><a href="#">경찰청</a></li>
@@ -327,99 +327,71 @@
                             <ul class="tree-list" id="law-list">                              
                                 <li>
                                     <div class="haschildren one-depth all">
-                                        <i></i> 전체
+                                      <button type="button" class="all-tree"><span class="ir-text">전체메뉴</span></button> <a href="#">전체</a>
                                     </div>
-                                    <ul class="two-depth-list">
+                                    <ul class="two-depth-list  is-active">
                                         <li>
-                                            <div class="haschildren two-depth-button"><i></i> 부처</div>
+                                            <div  class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button>  <a href="#">헌법</a></div>
                                             <ul class="tree-depth-list">
-                                                <li class="is-active"><a href="#">고용노동부</a></li>
-                                                <li><a href="#">과학기술정보통신부</a></li>
-                                                <li><a href="#">교육부</a></li>
-                                                <li><a href="#">국가보훈부</a></li>
-                                                <li><a href="#">국방부</a></li>
-                                                <li><a href="#">기획재정부</a></li>
-                                                <li><a href="#">농림축산식품부</a></li>
-                                                <li><a href="#">문화체육관광부</a></li>
-                                                <li><a href="#">법무부</a></li>
-                                                <li><a href="#">보건복지부</a></li>
-                                                <li><a href="#">산업통상자원부</a></li>
-                                                <li><a href="#">여성가족부</a></li>
-                                                <li><a href="#">외교부</a></li>
-                                                <li><a href="#">인사혁신처</a></li>
-                                                <li><a href="#">중소기업벤처부</a></li>
-                                                <li><a href="#">통일부</a></li>
-                                                <li><a href="#">해양수산부</a></li>
-                                                <li><a href="#">행정안전부</a></li>
+                                                <li class="is-active"><a href="#">제1장 헌법전</a></li>
+                                                <li">
+                                                    <div  class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button> <a href="#">제2장 국가·국민</a></div>
+                                                    <ul class="depthmenu03">
+                                                        <li><a href="#">제1절 국토·통일</a></li>
+                                                        <li><a href="#">제2절 국호·국기·연호등</a></li>
+                                                        <li><a href="#">제3절 국 민</a></li>
+                                                        <li><a href="#">제4절 상훈·전례·국경</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li><i></i><a href="#">제2장 국가·국민</a>
+                                                  <ul class="depthmenu03">
+                                                      <li><a href="#">제1절 국토·통일</a></li>
+                                                      <li><a href="#">제2절 국호·국기·연호등</a></li>
+                                                      <li><a href="#">제3절 국 민</a></li>
+                                                      <li><a href="#">제4절 상훈·전례·국경</a></li>
+                                                  </ul>
+                                              </li>
+                                              <li class="haschildren"><i></i><a href="#">제2장 국가·국민</a>
+                                                  <ul class="depthmenu03">
+                                                      <li><a href="#">제1절 국토·통일</a></li>
+                                                      <li><a href="#">제2절 국호·국기·연호등</a></li>
+                                                      <li><a href="#">제3절 국 민</a></li>
+                                                      <li><a href="#">제4절 상훈·전례·국경</a></li>
+                                                  </ul>
+                                              </li>                                                                                     
                                             </ul>
                                         </li>
                                         <li>
-                                            <div  class="haschildren two-depth-button"><i></i> 청</div>
+                                            <div  class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button>  <a href="#">헌법</a></div>
                                             <ul class="tree-depth-list">
-                                                <li><a href="#">검찰청</a></li>
-                                                <li><a href="#">경찰청</a></li>
-                                                <li><a href="#">관세청</a></li>
-                                                <li><a href="#">국가유산청</a></li>
-                                                <li><a href="#">국세청</a></li>
-                                                <li><a href="#">기상청</a></li>
-                                                <li><a href="#">농촌진흥청</a></li>
-                                                <li><a href="#">병무청</a></li>
-                                                <li><a href="#">방위사업청</a></li>
-                                                <li><a href="#">산림청</a></li>
-                                                <li><a href="#">새만금개발청</a></li>
-                                                <li><a href="#">소방청</a></li>
-                                                <li><a href="#">우주항공청</a></li>
-                                                <li><a href="#">재외동포청</a></li>
-                                                <li><a href="#">조달청</a></li>
-                                                <li><a href="#">질병관리청</a></li>
-                                                <li><a href="#">통계청</a></li>
-                                            </ul>
-                                        </li>    
-                                        <li>
-                                            <div  class="haschildren two-depth-button"><i></i> 부처</div>
-                                            <ul class="tree-depth-list">
-                                                <li><a href="#">고용노동부</a></li>
-                                                <li><a href="#">과학기술정보통신부</a></li>
-                                                <li><a href="#">교육부</a></li>
-                                                <li><a href="#">국가보훈부</a></li>
-                                                <li><a href="#">국방부</a></li>
-                                                <li><a href="#">기획재정부</a></li>
-                                                <li><a href="#">농림축산식품부</a></li>
-                                                <li><a href="#">문화체육관광부</a></li>
-                                                <li><a href="#">법무부</a></li>
-                                                <li><a href="#">보건복지부</a></li>
-                                                <li><a href="#">산업통상자원부</a></li>
-                                                <li><a href="#">여성가족부</a></li>
-                                                <li><a href="#">외교부</a></li>
-                                                <li><a href="#">인사혁신처</a></li>
-                                                <li><a href="#">중소기업벤처부</a></li>
-                                                <li><a href="#">통일부</a></li>
-                                                <li><a href="#">해양수산부</a></li>
-                                                <li><a href="#">행정안전부</a></li>
+                                                <li class="is-active"><a href="#">제1장 헌법전</a></li>
+                                                <li>
+                                                    <button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button> <a href="#">제2장 국가·국민</a>
+                                                    <ul class="depthmenu03">
+                                                        <li><a href="#">제1절 국토·통일</a></li>
+                                                        <li><a href="#">제2절 국호·국기·연호등</a></li>
+                                                        <li><a href="#">제3절 국 민</a></li>
+                                                        <li><a href="#">제4절 상훈·전례·국경</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li><i></i><a href="#">제2장 국가·국민</a>
+                                                  <ul class="depthmenu03">
+                                                      <li><a href="#">제1절 국토·통일</a></li>
+                                                      <li><a href="#">제2절 국호·국기·연호등</a></li>
+                                                      <li><a href="#">제3절 국 민</a></li>
+                                                      <li><a href="#">제4절 상훈·전례·국경</a></li>
+                                                  </ul>
+                                              </li>
+                                              <li><i></i><a href="#">제2장 국가·국민</a>
+                                                  <ul class="depthmenu03">
+                                                      <li><a href="#">제1절 국토·통일</a></li>
+                                                      <li><a href="#">제2절 국호·국기·연호등</a></li>
+                                                      <li><a href="#">제3절 국 민</a></li>
+                                                      <li><a href="#">제4절 상훈·전례·국경</a></li>
+                                                  </ul>
+                                              </li>                                                                                     
                                             </ul>
                                         </li>
-                                        <li>
-                                            <div class="haschildren two-depth-button"><i></i> 청</div>
-                                            <ul class="tree-depth-list">
-                                                <li><a href="#">검찰청</a></li>
-                                                <li><a href="#">경찰청</a></li>
-                                                <li><a href="#">관세청</a></li>
-                                                <li><a href="#">국가유산청</a></li>
-                                                <li><a href="#">국세청</a></li>
-                                                <li><a href="#">기상청</a></li>
-                                                <li><a href="#">농촌진흥청</a></li>
-                                                <li><a href="#">병무청</a></li>
-                                                <li><a href="#">방위사업청</a></li>
-                                                <li><a href="#">산림청</a></li>
-                                                <li><a href="#">새만금개발청</a></li>
-                                                <li><a href="#">소방청</a></li>
-                                                <li><a href="#">우주항공청</a></li>
-                                                <li><a href="#">재외동포청</a></li>
-                                                <li><a href="#">조달청</a></li>
-                                                <li><a href="#">질병관리청</a></li>
-                                                <li><a href="#">통계청</a></li>
-                                            </ul>
-                                        </li>                                                                             
                                     </ul>
                                 </li>
                             </ul>
