--- a/html/법령_목록.html
+++ b/html/법령_목록.html
@@ -230,7 +230,7 @@
                                     </div>
                                     <ul class="two-depth-list is-active">
                                         <li>
-                                            <div class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button> <a href="#">부처</a></div>
+                                            <div class="haschildren"> <a href="#none" class="two-depth-button"><i ></i>부처</a></div>
                                             <ul class="tree-depth-list">
                                                 <li class="is-active"><a href="#">고용노동부</a></li>
                                                 <li><a href="#">과학기술정보통신부</a></li>
@@ -253,7 +253,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <div  class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button> <a href="#">청</a></div>
+                                            <div  class="haschildren"><a href="#none" class="two-depth-button"><i ></i>청</a></div>
                                             <ul class="tree-depth-list">
                                                 <li><a href="#">검찰청</a></li>
                                                 <li><a href="#">경찰청</a></li>
@@ -275,7 +275,7 @@
                                             </ul>
                                         </li>    
                                         <li>
-                                            <div  class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button> <a href="#">부처</a></div>
+                                            <div  class="haschildren"><a href="#none" class="two-depth-button"><i ></i>부처</a></div>
                                             <ul class="tree-depth-list">
                                                 <li><a href="#">고용노동부</a></li>
                                                 <li><a href="#">과학기술정보통신부</a></li>
@@ -298,7 +298,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <div  class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button> <a href="#">청</a></div>
+                                            <div  class="haschildren"><a href="#none" class="two-depth-button"><i ></i> 청</a></div>
                                             <ul class="tree-depth-list">
                                                 <li><a href="#">검찰청</a></li>
                                                 <li><a href="#">경찰청</a></li>
@@ -331,11 +331,11 @@
                                     </div>
                                     <ul class="two-depth-list  is-active">
                                         <li>
-                                            <div  class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button>  <a href="#">헌법</a></div>
+                                            <div  class="haschildren"><a href="#none" class="two-depth-button"><i ></i>헌법</a></div>
                                             <ul class="tree-depth-list">
                                                 <li class="is-active"><a href="#">제1장 헌법전</a></li>
                                                 <li">
-                                                    <div  class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button> <a href="#">제2장 국가·국민</a></div>
+                                                    <div  class="haschildren"><a href="#none" class="two-depth-button"><i ></i>제2장 국가·국민</a></div>
                                                     <ul class="depthmenu03">
                                                         <li><a href="#">제1절 국토·통일</a></li>
                                                         <li><a href="#">제2절 국호·국기·연호등</a></li>
@@ -362,11 +362,11 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <div  class="haschildren"><button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button>  <a href="#">헌법</a></div>
+                                            <div  class="haschildren"><a href="#none" class="two-depth-button"><i ></i>헌법</a></div>
                                             <ul class="tree-depth-list">
                                                 <li class="is-active"><a href="#">제1장 헌법전</a></li>
                                                 <li>
-                                                    <button type="button" class="two-depth-button"><span class="ir-text">하위메뉴 열기</span></button> <a href="#">제2장 국가·국민</a>
+                                                  <a href="#none" class="two-depth-button"><i ></i>제2장 국가·국민</a>
                                                     <ul class="depthmenu03">
                                                         <li><a href="#">제1절 국토·통일</a></li>
                                                         <li><a href="#">제2절 국호·국기·연호등</a></li>
